# logrun-discord-bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py  main.py
src/bot/: bot.py
src/bot/cogs/: __init__.py  admin.py  guild.py  info.py  setup.py  verification.py
src/bot/embeds/: __init__.py  leaderboards.py  profiles.py  statistics.py  verification.py
src/config/: constants.py  logging_config.py  settings.py
src/database/: connection.py  models.py
src/database/repositories/: character.py  performance.py  statistics.py  user.py
src/services/: battle_net.py  cache.py  guild_manager.py  role_manager.py  scheduler.py  verification.py  warcraft_logs.py
src/utils/: decorators.py  errors.py  helpers.py  logger.py  validators.py
